src/main/resources/static/css/home.css
* {
    box-sizing: border-box;
}

.row {
    margin-left:0;!important;
    margin-right:0;!important;
}

.top-fold {
    margin-top: 10px;
    text-align: center;
    height: 1100px;

}

.home-card-text{
    font-size: 12px;
}

.center-green {
    height: 850px;
}


.bottom-fold {

    text-align: center;
    height: 1100px;

}

#about-us {
    margin-top: 160px;
}

#about-message {
    margin-top: 10px;
    color: white;
}

.home-welcome-message{
    font-size: 15px;
    font-family: "Open Sans";
    font-weight: lighter;
    margin-top: 5vh;
    vertical-align: middle;

}


.about-us {
    color: white;
    font-size: 15px;
    font-family: "Open Sans";
    font-weight: lighter;

}


.hero-top {
    margin-top: 30px;
}


.home-card-deck {
    margin: 50px 30px 0px ;

}

.home-card {
    box-shadow: rgba(51, 51, 51, 0.28) 10px 10px 10px -2px;
}

.hcard-content{
    font-size: 28px;
}


.home-grid {
    display: inline-grid;
    padding: 10px;
    grid-template-columns: auto auto;
    width: 550px;
    height: 470px;
}

.home-grid-cta {

    font-size: 30px;
    text-align: center;
}

h2.block-msg {
    font-size: 25px;
}

.cta-message {
    font-size: 8px;
}

.block-btn {
    font-size: 10px;
    margin-bottom: 5px;
}




/* Medium devices (tablets, 768px and up) */
@media screen and (min-width:768px) {

    .home-card-deck {
        margin: 36px -35px 0px ;

    }
    .home-card{
        padding: 0px;
    }
    .home-card-text{
        font-size: 9px;
    }
    i.fas.fa-laptop::before{
        font-size: 40px;!important;
    }

    i.fas.fa-user-tie::before{
        font-size: 50px;!important;
        margin-top: 30px;
    }

    i.fas.fa-users::before{
        font-size: 40px;!important;
    }

    .top-fold {
        height: 636px;

    }
    .center-green{
            height: 1200px;
    }

    .bottom-fold {

        height: 500px;

    }

    .main-header{
        margin-top: 50px;
        margin-left: 91px;
        margin-right: 0px;
    }
    .hero-top {
        padding: 0px;
    }
    #header-image{
        margin-top: 50px;
    }

    .home-grid {

        width: 658px;
        height: 1020px;
    }

    .hcard-content{
        font-size: 18px;
    }

    .cta-grid{
        margin-top: 20px;
    }
    .cta-message {

        font-size: 16px;
    }

    .rsvp-block{
        margin-top: 25px;
    }

    #about-us{
        margin-top: -131px;
    }
    .gif-container {
        margin-top: 145px;
    }
    .connect-home{
        margin-top: 10px;
    }

}

/* Large devices (desktops, 992px and up) */
@media screen and (min-width:992px) {
    .home-welcome-header {
        margin-top: 75px;
    }
    .home-grid {
        width: 790px;
        height: 1190px;
    }

    .cta-grid{
        margin-top: 30px;
    }

    #about-message {
        margin-top: 100px;
    }
}

/* Extra large devices (large desktops, 1200px and up) */
@media screen and (min-width:1200px) {
    .home-welcome-header {
        margin-top: 100px;
    }

    #community-gif {
        width: 80%;
    }
}

@media screen and (min-width:2200px) {
    .top-fold {

        height: 900px;

    }

    .home-welcome-header {
        margin-top: 90px;
    }


    .home-card-deck {
        margin-top: 150px;
    }

    #community-gif{
        width: 55%;
    }

}

